@@ -9,6 +9,8 @@ vim-addon-manager (0.4.2) UNRELEASED; urgency=low
     command for a little while for people that are used to the old name.
     (Closes: #501439)
   * Remove empty directories left behind when removing addons.
+  * Include the target directory in the install/remove informational messages.
+    (Closes: #499563)
 
  -- James Vega <jamessan@debian.org>  Fri, 24 Jul 2009 19:56:48 +0200
 
